--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,51 @@
-
+/********Navbar********/
 #header-nav {
-  background-color: #00ACBF;
+  background-color: #008B8B;
   border-radius: 0;
+  margin-bottom: 0;
   border: 0;
+
 }
 
-.navbar-brand {
-  padding-top: 15px;
-}
-
-.navbar-brand a { /* Restaurant name */
-  color: #557c3e;
-  font-size: 1.5em;
-  text-transform: uppercase;
+.navbar-header .navbar-brand {
+  color:white;
+  font-size: 2em;
   font-weight: bold;
   text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
   line-height: .75;
 }
 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -30px;
-}
 
-#nav-list {
-  margin-top: 10px;
-}
-#nav-list a {
-  color: #951C49;
+
+#colapsed-menu{
   text-align: center;
-}
-#nav-list a:hover {
-  background: #E7E7E7;
-}
-#nav-list a span {
-  font-size: 1.8em;
+  margin-top: 0;
+  border-top: 1px solid #008b8b;
 }
 
-#collapsable-nav a { /* Collapsed nav menu text */
-  font-size: 1.2em;
+
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
 }
-#collapsable-nav a span { /* Collapsed nav menu glyph */
-  font-size: 1em;
-  margin-right: 5px;
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #222;
+}
+
+.collapse ul li{
+  border: 1px solid #222;
+}
+#chicken, #beef {
+  border-bottom: 0;
+}
+#chicked{
+  border-top: 1px;
+}
+.row{
+  text-align: center;
+  background-color: #222; 
+  color: white;
+}
+h1{
+  text-align: center;
 }
